--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kode Space</title>
+  <title>Kode Space - Dự án</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
@@ -77,20 +77,20 @@
                 <li>Bắt đầu từ 2018</li>
                 <li>Ngôn ngữ C#</li>
               </ul>
-              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              <a href="" class="btn-buy">Tìm hiểu thêm</a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <span class="featured">Quan trọng</span>
-              <h3 style="color: #65c600;">Chuỗi dự án Kode+Pascal</h3>
+              <h3 style="color: #65c600;">Chuỗi dự án Kode + Pascal</h3>
               <img src="assets/img/project/kode.png" class="img-fluid" alt="">
               <ul>
                 <li>Bắt đầu từ 2019</li>
                 <li>Ngôn ngữ Pascal, JavaScript</li>
               </ul>
-              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              <a href="https://github.com/kodestudio/kpstore" class="btn-buy">Tìm hiểu thêm</a>
             </div>
           </div>
 
@@ -114,20 +114,20 @@
                 <li>Bắt đầu từ 2019</li>
                 <li>Ngôn ngữ Java</li>
               </ul>
-              <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+              <a href="https://github.com/quocthinhvo/kmstudio" class="btn-buy">Tìm hiểu thêm</a>
             </div>
           </div>
 
 
             <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
-                <h3 style="color: #0759d5;">Hydro OS</h3>
+                <h3 style="color: #0759d5;">Hệ điều hành Hydro OS</h3>
                 <img src="assets/img/project/hydroos.png" class="img-fluid" alt="">
                 <ul>
                   <li>Bắt đầu từ 2020</li>
                   <li>Ngôn ngữ C++, Python</li>
                 </ul>
-                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                <a href="https://github.com/kodestudio/HydroOS" class="btn-buy">Tìm hiểu thêm</a>
               </div>
             </div>
   
@@ -139,7 +139,7 @@
                   <li>Bắt đầu từ 2020</li>
                   <li>Ngôn ngữ C#</li>
                 </ul>
-                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                <a href="https://github.com/kodestudio/jetos" class="btn-buy">Tìm hiểu thêm</a>
               </div>
             </div>
   
@@ -151,7 +151,7 @@
                   <li>Bắt đầu từ 2021</li>
                   <li>Ngôn ngữ Dark</li>
                 </ul>
-                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                <a href="https://github.com/kodestudio/spinel" class="btn-buy">Tìm hiểu thêm</a>
               </div>
             </div>
   
@@ -163,7 +163,7 @@
                   <li>Bắt đầu từ 2020</li>
                   <li>Ngôn ngữ JavaScript</li>
                 </ul>
-                <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                <a href="https://github.com/kodestudio/neon" class="btn-buy">Tìm hiểu thêm</a>
               </div>
             </div>
         </div>
