--- a/project.html
+++ b/project.html
@@ -77,7 +77,7 @@
                 <li>Bắt đầu từ 2018</li>
                 <li>Ngôn ngữ C#</li>
               </ul>
-              <a href="" class="btn-buy">Tìm hiểu thêm</a>
+              <a href="https://github.com/quocthinhvo/VPT" class="btn-buy">Tìm hiểu thêm</a>
             </div>
           </div>
 
