CẬP NHẬT LINK CHO DỰ ÁN VPT

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>CÁC DỰ ÁN TIÊU BIỂU</h2>
+          <h2>CÁC DỰ ÁN CỦA KODE</h2>
           <p></p>
         </header>
 
@@ -389,7 +389,7 @@
                 <li>Bắt đầu từ 2018</li>
                 <li>Ngôn ngữ C#</li>
               </ul>
-              <a href="" class="btn-buy">Tìm hiểu thêm</a>
+              <a href="https://github.com/quocthinhvo/VPT" class="btn-buy">Tìm hiểu thêm</a>
             </div>
           </div>
 
@@ -482,8 +482,8 @@
 
       </div>
 
-    </section><!-- End Pricing Section -->
-
+    </section><!-- End Project Section -->
+    
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
 
