--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>CÁC DỰ ÁN CỦA KODE</h2>
+          <h2>CÁC DỰ ÁN TIÊU BIỂU</h2>
           <p></p>
         </header>
 
