ĐỔI LINK PHẦN GETSTARTED

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <li><a href="donate.html">Ủng hộ</a></li>
               <li><a href="job.html">Việc làm</a></li>
             </ul>
-            <li><a class="getstarted scrollto" href="https://www.facebook.com/quocthinhvo.dev">Tham gia ngay!</a></li>
+            <li><a class="getstarted scrollto" href="job.html">Tham gia ngay!</a></li>
           </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
