--- a/terms.html
+++ b/terms.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kode Space</title>
+  <title>Kode Space - Điều khoản và điều kiện</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
@@ -50,9 +50,9 @@
 
         <ol>
           <li><a href="index.html">Trang chủ</a></li>
-          <li>Điều kiện và quy định</li>
+          <li>Điều khoản và điều kiện</li>
         </ol>
-        <h2>Điều kiện và quy định</h2>
+        <h2>Điều khoản và điều kiện</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
