Sửa lỗi sai chính tả Dark và Dart

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                             <img src="assets/img/project/kodemess.png" class="img-fluid" alt="">
                             <ul>
                                 <li>Bắt đầu từ 2021</li>
-                                <li>Ngôn ngữ Dark</li>
+                                <li>Ngôn ngữ Dart</li>
                             </ul>
                             <a href="https://github.com/kodestudio/spinel" class="btn-buy">Tìm hiểu thêm</a>
                         </div>
