--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
 
   <!-- Favicons -->
   <link href="https://avatars.githubusercontent.com/u/58879335" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://avatars.githubusercontent.com/u/58879335" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
