Thêm tính năng cảm ơn cho thành viên thực hiện đóng góp mã nguồn cho Kode 💖

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center">
                     <h1 data-aos="fade-up">Kode</h1>
-                    <h2 data-aos="fade-up" data-aos-delay="400">Là tổ chức dành cho những bạn trẻ đam mê về công nghệ thông tin.</h2>
-                    <div data-aos="fade-up" data-aos-delay="600">
+                    <h2 data-aos="fade-up" data-aos-delay="400">Là tổ chức dành cho những bạn trẻ đam mê về công nghệ thông tin.</h2>                    <div data-aos="fade-up" data-aos-delay="600">
                         <div class="text-center text-lg-start">
                             <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                                 <span>Xem thêm</span>
@@ -107,15 +106,13 @@
                     <img src="assets/img/hero-img.png" class="img-fluid" alt="">
                 </div>
             </div>
+            <h5 id="h5_contribute" class="text-center" data-aos="zoom-in" data-aos-delay="100"></h5>
         </div>
-
     </section>
     <!-- End Hero -->
-
     <main id="main">
         <!-- ======= About Section ======= -->
         <section id="about" class="about">
-
             <div class="container" data-aos="fade-up">
                 <div class="row gx-0">
 
@@ -1137,6 +1134,7 @@
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/getcontribute.js"></script>
 
 
     <!-- Load Facebook SDK for JavaScript -->
