Thêm project Kode Discord Bot và Kode Feed
Thay đổi chính:
*Thêm 2 Project Kode Discord Bot và Kode Feed vào Project.html.
*Thêm icon cho Kode Discord Bot (96x96).

Co-Authored-By: Quốc Thịnh Võ <46624702+quocthinhvo@users.noreply.github.com>

--- a/project.html
+++ b/project.html
@@ -203,6 +203,30 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="500">
+                        <div class="box">
+                            <h3 style="color: #ad4545;">Kode Feed</h3>
+                            <img src="assets/img/project/kode.png" class="img-fluid" alt="">
+                            <ul>
+                                <li>Bắt đầu từ 2020</li>
+                                <li>Ngôn ngữ JavaScript</li>
+                            </ul>
+                            <a href="https://github.com/kodestudio/neon" class="btn-buy">Tìm hiểu thêm</a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="500">
+                        <div class="box">
+                            <h3 style="color: #3a6988;">Kode Discord Bot</h3>
+                            <img src="assets/img/project/discord.png" class="img-fluid" alt="">
+                            <ul>
+                                <li>Bắt đầu từ 2020</li>
+                                <li>Ngôn ngữ JavaScript</li>
+                            </ul>
+                            <a href="https://github.com/kodestudio/neon" class="btn-buy">Tìm hiểu thêm</a>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
