Update link cho Kode Discord Bot
Thay đổi chính:
*Link Kode Discord Bot đổi qua https://github.com/kodestudio/kode-discord-bot

Co-Authored-By: Quốc Thịnh Võ <46624702+quocthinhvo@users.noreply.github.com>

--- a/project.html
+++ b/project.html
@@ -223,7 +223,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/neon" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://github.com/kodestudio/kode-discord-bot" class="btn-buy">Tìm hiểu thêm</a>
                         </div>
                     </div>
 
