--- a/project.html
+++ b/project.html
@@ -167,7 +167,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                         <div class="box">
                             <h3 style="color: #363636;">Spinel</h3>
                             <img src="assets/img/project/spinel.png" class="img-fluid" alt="">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                         <div class="box">
                             <h3 style="color: #4b448b;">Pas2Js</h3>
                             <img src="assets/img/project/pas2js.png" class="img-fluid" alt="">
@@ -191,7 +191,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                         <div class="box">
                             <h3 style="color: #114e05;">Kode Storage</h3>
                             <img src="assets/img/project/kode.png" class="img-fluid" alt="">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="500">
+                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
                         <div class="box">
                             <h3 style="color: #ad4545;">Kode Feed</h3>
                             <img src="assets/img/project/kode.png" class="img-fluid" alt="">
@@ -215,7 +215,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="500">
+                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                         <div class="box">
                             <h3 style="color: #3a6988;">Kode Discord Bot</h3>
                             <img src="assets/img/project/discord.png" class="img-fluid" alt="">
@@ -226,6 +226,19 @@
                             <a href="https://github.com/kodestudio/kode-discord-bot" class="btn-buy">Tìm hiểu thêm</a>
                         </div>
                     </div>
+
+                    <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+                        <div class="box">
+                            <h3 style="color: #3a6988;">Kode Mini Notes</h3>
+                            <img src="assets/img/project/kode.png" class="img-fluid" alt="">
+                            <ul>
+                                <li>Bắt đầu từ 2020</li>
+                                <li>Ngôn ngữ JavaScript</li>
+                            </ul>
+                            <a href="https://kodelang.dev/mininote" class="btn-buy">Tìm hiểu thêm</a>
+                        </div>
+                    </div>
+
 
                 </div>
 
