Thay đổi các nút cho phù hợp
Thay đổi chính:
*Thay đổi các nút "Tìm hiểu ngay" thành "Sử dụng ngay" vì sản phẩm thì sẽ hoàn thành và stable nên dùng được, còn project còn mang tính experimental.

Co-Authored-By: Quốc Thịnh Võ <46624702+quocthinhvo@users.noreply.github.com>

--- a/product.html
+++ b/product.html
@@ -77,7 +77,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ C++, Python</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/HydroOS" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://github.com/kodestudio/HydroOS" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
@@ -89,7 +89,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ C#</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/jetos" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://github.com/kodestudio/jetos" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
@@ -101,7 +101,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/neon" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://github.com/kodestudio/neon" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
@@ -113,7 +113,7 @@
                                 <li>Bắt đầu từ 2021</li>
                                 <li>Ngôn ngữ Python</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/spinel" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://github.com/kodestudio/spinel" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
@@ -125,7 +125,7 @@
                                 <li>Kế thừa và phát triển</li>
                                 <li>Ngôn ngữ Pascal</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/pas2js" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://github.com/kodestudio/pas2js" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
@@ -137,7 +137,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="#" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
@@ -149,7 +149,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/neon" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://github.com/kodestudio/neon" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
@@ -161,7 +161,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/kode-discord-bot" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://github.com/kodestudio/kode-discord-bot" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
@@ -174,7 +174,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="https://kodelang.dev/mininote" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="https://kodelang.dev/mininote" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
