--- a/product.html
+++ b/product.html
@@ -137,7 +137,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="#" class="btn-buy">Sử dụng ngay!</a>
+                            <a href="https://kodelang.dev/storage/" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
