Đổi link ở butt tại phần HydroOS
Thay đổi chính:
*Đổi từ link dẫn đến GitHub của HydroOS sang link download GG Drive của HydroOS(https://drive.google.com/uc?id=1po26NXqFQ2WLzmtT5Hsb0HCc2zaLLfAn&export=download)

Co-Authored-By: Quốc Thịnh Võ <46624702+quocthinhvo@users.noreply.github.com>

--- a/product.html
+++ b/product.html
@@ -77,7 +77,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ C++, Python</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/HydroOS" class="btn-buy">Sử dụng ngay!</a>
+                            <a href="https://drive.google.com/uc?id=1po26NXqFQ2WLzmtT5Hsb0HCc2zaLLfAn&export=download" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
