Thay đổi nội dung update nhằm dùng cho các mục đích sau này
Co-Authored-By: Quốc Thịnh Võ <46624702+quocthinhvo@users.noreply.github.com>

--- a/update.html
+++ b/update.html
@@ -162,9 +162,9 @@
             </div>
 
             <div class="update__text">
-                <p>Working on updates</p>
-                <p id="update__percentage">0% complete</p>
-                <p>Don't turn of your computer</p>
+                <p>This website is now under maintainance</p>
+                <p id="update__percentage">0% completed</p>
+                <p>Don't believe in the update percentage as this process will be never completed; unless you press ENTER with a hammer. </p>
             </div>
         </div>
     </div>
