Thay link cho Kode Feed: Từ link GitHub qua link sản phẩm thật (:
Co-Authored-By: Quốc Thịnh Võ <46624702+quocthinhvo@users.noreply.github.com>

--- a/product.html
+++ b/product.html
@@ -149,7 +149,7 @@
                                 <li>Bắt đầu từ 2020</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="https://github.com/kodestudio/neon" class="btn-buy">Sử dụng ngay!</a>
+                            <a href="https://kodelang.dev/feeds/" class="btn-buy">Sử dụng ngay!</a>
                         </div>
                     </div>
 
