Một số update nhỏ cho update.html
Thay đổi chính:
*Đổi sang giao diện update Windows 10 để tăng sự tin tưởng
*Đổi nội dung thành "Trang web đang bảo trì" nhằm phục vụ cho mục đích sau này, không phải mục đích prank như các bản trước.
*Thêm 1 câu đe dọa quay về homepage dành cho những người gà IT.

Co-Authored-By: Quốc Thịnh Võ <46624702+quocthinhvo@users.noreply.github.com>

--- a/update.html
+++ b/update.html
@@ -91,6 +91,13 @@
                 transform: rotate(1.7turn)
             }
         }
+        
+        a,
+        a:hover {
+            color: white;
+            text-decoration: none;
+            font-family: monospace;
+        }
     </style>
     <script>
         /**
@@ -164,7 +171,8 @@
             <div class="update__text">
                 <p>This website is now under maintainance</p>
                 <p id="update__percentage">0% completed</p>
-                <p>Don't believe in the update percentage as this process will be never completed; unless you press ENTER with a hammer. </p>
+                <p>Don't believe in the update percentage as this process will be never completed unless you press ENTER with a hammer. </p><br>
+                <p><a href="https://kodelang.dev">Now, please click here go back to homepage nor your computer will have a BSOD</a></p>
             </div>
         </div>
     </div>
