Thêm trang "Thành viên", liệt kê các thành viên của Kode
Thay đổi chính:
*Thêm trang thành viên, gồm 14 thành viên chính có trên trang Kode Studio trên GitHub
*Nếu thiếu (thừa) thành viên nào, hay muốn đổi tên hiển thị (tên thật - nickname) hoặc avatar, xin vui lòng đề cập trong mục issue hoặc nhắn trên Discord.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="https://avatars.githubusercontent.com/u/58879335" rel="icon">
-  <link href="https://avatars.githubusercontent.com/u/58879335" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="https://avatars.githubusercontent.com/u/58879335" rel="icon">
+    <link href="https://avatars.githubusercontent.com/u/58879335" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -59,6 +59,7 @@
                     <li><a class="nav-link scrollto" href="blog.html">Blog</a></li>
                     <li><a class="nav-link scrollto" href="product.html">Sản phẩm</a></li>
                     <li><a class="nav-link scrollto" href="project.html">Dự án</a></li>
+                    <li><a class="nav-link scrollto" href="member.html">Thành viên</a></li>
                     <li><a class="nav-link scrollto" href="about.html">Về chúng tôi</a></li>
                     <li class="dropdown"><a href=""><span>Thêm</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
@@ -93,7 +94,8 @@
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center">
                     <h1 data-aos="fade-up">Kode</h1>
-                    <h2 data-aos="fade-up" data-aos-delay="400">Là tổ chức dành cho những bạn trẻ đam mê về công nghệ thông tin.</h2>                    <div data-aos="fade-up" data-aos-delay="600">
+                    <h2 data-aos="fade-up" data-aos-delay="400">Là tổ chức dành cho những bạn trẻ đam mê về công nghệ thông tin.</h2>
+                    <div data-aos="fade-up" data-aos-delay="600">
                         <div class="text-center text-lg-start">
                             <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                                 <span>Xem thêm</span>
@@ -1116,8 +1118,7 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and edit with ❤ by <a
-                href="https://www.github.com/kodestudio">@koder</a>
+                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and edit with ❤ by <a href="https://www.github.com/kodestudio">@koder</a>
             </div>
         </div>
     </footer>
