Thêm tên thật cho wintersawcher và Rek
Thay đổi chính:
*Thay đổi từ nickname của thành viên wintersawcher sang tên thật Đỗ Anh Vũ, thêm avatar lụm lặt từ Facebook.
*Thay đổi nickname của thành viên Rek-kun sang tên Hà Minh Nghĩa
*Thay đổi nickname của Kundo sang tên Quân Đỗ.

--- a/member.html
+++ b/member.html
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Rek-kun</h4>
+                                <h4>Hà Minh Nghĩa</h4>
                                 <span>Kode Developer</span>
                             </div>
                         </div>
@@ -243,13 +243,13 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets\img\human\win.png" class="img-fluid" alt="">
+                                <img src="assets\img\human\vu.jpg" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href="https://github.com/wintersawcher"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>wintersawcher</h4>
+                                <h4>Đỗ Anh Vũ</h4>
                                 <span>Kode Developer</span>
                             </div>
                         </div>
@@ -264,7 +264,7 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Kun Do</h4>
+                                <h4>Quân Đỗ</h4>
                                 <span>Kode Supporter</span>
                             </div>
                         </div>
