Thay đổi lại name của mem Kun Do
Thay đổi chính:
*Thay đổi thành nickname cho mem Kun Do do unsure về tên thật.

--- a/member.html
+++ b/member.html
@@ -264,7 +264,7 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Quân Đỗ</h4>
+                                <h4>Kun Do</h4>
                                 <span>Kode Supporter</span>
                             </div>
                         </div>
