Thay ảnh portfolio "Keyboard của Admin" bằng ảnh remote server KodeSpace từ xa bằng OpenSSH

--- a/index.html
+++ b/index.html
@@ -666,14 +666,6 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-device">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/activity/keyboard.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Keyboard của admin :)</h4>
-                            </div>
-                        </div>
-                    </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-device">
                         <div class="portfolio-wrap">
@@ -683,21 +675,18 @@
                             </div>
                         </div>
                     </div>
-                    <!--
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
 
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/activity/ssh.PNG" class="img-fluid" alt="">
+                            <div class="portfolio-info">
+                                <h4>Remote server KodeSpace </h4>
+                                <p>bằng OpenSSH</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
