--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             <i class="bi bi-headset" style="color: #15be56;"></i>
                             <div>
                                 <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-                                <p>giờ tương tác</p>
+                                <p>Giờ tương tác</p>
                             </div>
                         </div>
                     </div>
