--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta http-equiv = "refresh" content = "5 time ; url = https://kodelang.dev/update.html"/>
   <title>Kode Space - Về chúng tôi</title>
   <meta content="" name="description">
 
