Redirect qua update.html dùng javascript
Co-Authored-By: Quốc Thịnh Võ <46624702+quocthinhvo@users.noreply.github.com>

--- a/about.html
+++ b/about.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta http-equiv = "refresh" content = "5 time ; url = https://kodelang.dev/update.html"/>
   <title>Kode Space - Về chúng tôi</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
 
+  <script>
+    window.location.replace("https://kodelang.dev/update.html");
+  </script>
   <!-- Favicons -->
   <link href="https://avatars.githubusercontent.com/u/58879335" rel="icon">
   <link href="https://avatars.githubusercontent.com/u/58879335" rel="apple-touch-icon">
