--- a/project3/Project3.html
+++ b/project3/Project3.html
@@ -48,7 +48,13 @@
     </nav>
 
     <!-- BANNER -->
-    
+    <div class="banner clearfix">
+        <img src="images/lodging.png" alt="Banner" class="bannerImage">
+            <div class="bannerText">
+                <h1>Find a place to stay</h1>
+                <p>Rent from people in over 34,000 cities and countries</p>
+            </div>
+    </div>    
 
 </body>
 
