--- a/project3/Project3.html
+++ b/project3/Project3.html
@@ -56,6 +56,22 @@
             </div>
     </div>    
 
+    <!-- PHOTO GRID -->
+    <div class="container">
+        <div class="row">
+           <div class="col-4 col-s-6 col-m-12">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/mexico-city.png" />
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/ny.png" />
+           </div>
+           <div class="col-4 col-s-6 col-m-12">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/tokyo.png" />
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/paris.png" />
+           </div>
+           <div class="col-4 col-s-6 col-m-12">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/invite.png" />
+           </div>
+        </div>
+    </div>
 </body>
 
 </html>
