--- a/project3/index.html
+++ b/project3/index.html
@@ -50,26 +50,48 @@
     <!-- BANNER -->
     <div class="banner clearfix">
         <img src="images/lodging.png" alt="Banner" class="bannerImage">
-            <div class="bannerText">
-                <h1>Find a place to stay</h1>
-                <p>Rent from people in over 34,000 cities and countries</p>
-            </div>
-    </div>    
+        <div class="bannerText">
+            <h1>Find a place to stay</h1>
+            <p>Rent from people in over 34,000 cities and countries</p>
+        </div>
+    </div>
 
     <!-- PHOTO GRID -->
     <div class="container">
         <div class="row">
-           <div class="col-4 col-s-6 col-m-12">
-              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/mexico-city.png" />
-              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/ny.png" />
-           </div>
-           <div class="col-4 col-s-6 col-m-12">
-              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/tokyo.png" />
-              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/paris.png" />
-           </div>
-           <div class="col-4 col-s-6 col-m-12">
-              <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/invite.png" />
-           </div>
+            <div class="col-4 col-s-6 col-m-12">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/mexico-city.png" />
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/ny.png" />
+            </div>
+            <div class="col-4 col-s-6 col-m-12">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/tokyo.png" />
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/paris.png" />
+            </div>
+            <div class="col-4 col-s-6 col-m-12">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/invite.png" />
+            </div>
+        </div>
+    </div>
+
+    <!-- TEXT COLUMN  -->
+
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-4 col-s-6 col-m-12">
+                <h4>Travel</h4>
+                <p>From apartments and rooms to tree houses and boats: stay in unique spaces in 192 countries</p>
+                <a href="https://www.airbnb.com/help/booking-and-traveling ">See how to travel on Airbnb</a>
+            </div>
+            <div class="col-4 col-s-6 col-m-12">
+                <h4>Host</h4>
+                <p>Renting out your unused space could pay your bills or fund your next vacation.</p>
+                <a href="https://www.airbnb.com/hosting ">Learn more about hosting</a>
+            </div>
+            <div class="col-4 col-s-6 col-m-12">
+                <h4>Trust and safety</h4>
+                <p>From Verified ID to our worldwide customer support team, we've got your back.</p>
+                <a href="https://www.airbnb.com/trust ">Learn about trust at Airbnb</a>
+            </div>
         </div>
     </div>
 </body>
