--- a/project3/index.html
+++ b/project3/index.html
@@ -10,7 +10,7 @@
     <meta name="lang" content="en-US">
 
     <!-- Page Title -->
-    <title>Project 3</title>
+    <title>Project 3 - FX-10909 Nguyễn Ngọc Thiện</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
