--- a/hydroos/index.html
+++ b/hydroos/index.html
@@ -28,6 +28,10 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <script type="text/javascript">
+    window.location.href = "https://kodelang.dev/update.html"
+  </script>
+
 </head>
 
 <body>
